# avgmatrix

./: README.md  ci.sh  dev_dependencies.txt  pyproject.toml
avgmatrix/: .make_matrix.py.swp  make_matrix.py
tests/: .test_make_matrix.py.swp  conftest.py  test_make_matrix.py
